--- a/data/mi1_py/sprites/01.yaml
+++ b/data/mi1_py/sprites/01.yaml
@@ -434,12 +434,12 @@ lowmoral1:
   animations:
     idle_e_1:
       frames:
-        - [[1,1,31,30,13,0], [33,1,15,12,8,0]]
+        - [[1,1,31,30,13,0], [33,1,15,12,8,-28]]
     talk_e:
       frames:
-        - [[1,1,31,30,13,0], [33,1,15,12,8,0]]
-        - [[1,1,31,30,13,0], [66,1,15,12,7,2]]
-        - [[1,1,31,30,13,0], [50,1,15,13,7,1]]
+        - [[1,1,31,30,13,0], [33,1,15,12,8,-28]]
+        - [[1,1,31,30,13,0], [66,1,15,12,7,-28]]
+        - [[1,1,31,30,13,0], [50,1,15,13,7,-28]]
     idle_e:
       frames:
         - [33,15,34,39,17,0]
@@ -448,7 +448,7 @@ lowmoral1:
         - [[1,1,31,30,13,0], [33,1,15,12,8,-28]]
     idle_n:
       frames:
-        - [[1,1,31,30,13,0], [83,1,14,12,8,0]]
+        - [[1,1,31,30,13,0], [83,1,14,12,8,-28]]
 
 lowmoral2:
   sheet: 'gfx/sprites/sprites1.png'
@@ -459,8 +459,8 @@ lowmoral2:
         - [[100,1,24,30,14,0],[127,1,12,9,7,-28]]
     idle_s:
       frames:
-        - [[100,1,24,30,14,0],[141,1,10,9,7,0]]
-        - [[100,1,24,30,14,0],[153,1,19,9,7,0]]
+        - [[100,1,24,30,14,0],[141,1,10,9,7,-28]]
+        - [[100,1,24,30,14,0],[153,1,10,9,7,-28]]
     talk_e:
       frames:
         - [314,34,24,39,14,0]
@@ -468,7 +468,7 @@ lowmoral2:
         - [367,34,24,39,14,0]        
     hit:
       frames:
-        - [[100,1,24,30,14,0], [128,11,11,8,7,0]]
+        - [[100,1,24,30,14,0], [128,11,11,8,7,-28]]
 
 lowmoral3:
   sheet: 'gfx/sprites/sprites1.png'
@@ -479,7 +479,33 @@ lowmoral3:
         - [[67,127,24,37,14,0],[93,127,13,15,13,-34]]
     idle_s:
       frames:
-        - [[67,127,24,37,14,0],[176,127,11,13,6,0]]
+        - [[67,127,24,37,14,0],[176,127,11,13,10,-34]]
+    talk_e:
+      frames:
+        - [[67,127,24,37,14,0],[93,144,13,15,13,-34]]
+        - [[67,127,24,37,14,0],[108,127,13,15,13,-34]]
+        - [[67,127,24,37,14,0],[108,144,13,15,13,-34]]
+    talk_e_1:
+      frames:
+        - [[149,127,24,37,13,0], [93,144,13,15,13,-34]]
+        - [[149,127,24,37,13,0], [108,127,13,15,13,-34]]
+        - [[149,127,24,37,13,0], [108,144,13,15,13,-34]]
+    talk_s:
+      frames:
+        - [[67,127,24,37,14,0], [176,127,11,13,10,-34]]
+        - [[67,127,24,37,14,0], [175,142,13,14,11,-34]]
+    punch:
+      loop: false
+      frames:
+        - [[67,127,24,37,14,0], [176,127,11,13,10,-34]]
+        - [[190,127,23,37,13,0], [176,127,11,13,10,-34]]
+        - [[213,127,30,45,18,0], [176,127,11,13,10,-34]]
+        - [[244,127,32,37,20,0], [176,127,11,13,10,-34]]
+    open_jacket:
+      frames:
+        - [[67,127,24,37,14,0],[93,127,13,15,13,-34]]
+        - [[124,127,23,37,13,0],[93,127,13,15,13,-34]]
+        - [[149,127,24,37,13,0],[93,127,13,15,13,-34]]
 rat:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
@@ -489,7 +515,63 @@ rat:
         - [[69,166,13,12,5,0],[99,168,5,4,3,0]]
         - [[69,166,13,12,5,0],[99,175,6,2,4,0]]
         - [[84,168,13,10,6,0],[99,175,6,2,4,0]]
-# 		{
+
+fakedoor1:
+  sheet: 'gfx/sprites/sprites1.png'
+  type: 'asset.sprite'
+  animations:
+    closed:
+      frames:
+        - [58,179,16,29]
+    open:
+      frames:
+        - [76,179,16,29]
+
+fakedoor2:
+  sheet: 'gfx/sprites/sprites1.png'
+  type: 'asset.sprite'
+  animations:
+    closed:
+      frames:
+        - [3,204,8,14]
+    open:
+      frames:
+        - [13,204,8,14]
+fakedoor3:
+  sheet: 'gfx/sprites/sprites1.png'
+  type: 'asset.sprite'
+  animations:
+    closed:
+      frames:
+        - [388,484,8,13]
+    open:
+      frames:
+        - [398,484,8,13]
+fakedoor4:
+  sheet: 'gfx/sprites/sprites1.png'
+  type: 'asset.sprite'
+  animations:
+    closed:
+      frames:
+        - [388,498,8,12]
+    open:
+      frames:
+        - [398,398,8,12]
+door_village_voodoolady:
+  sheet: 'gfx/sprites/sprites1.png'
+  type: 'asset.sprite'
+  animations:
+    closed:
+      frames:
+        - [3,179,26,24]
+    open:
+      frames:
+        - [31,179,26,24]
+
+
+
+
+        # 		{
 # 			name="talk_e",
 # 			frames = {
 # 				{ duration = dt, quads = { {id=s.low_moral_fiber_3_body_idle}, {id=s.low_moral_fiber_3_head_talk_e_1, pos=lmf3_head}}},
