--- a/data/smb_py/rooms/world1_1.yaml
+++ b/data/smb_py/rooms/world1_1.yaml
@@ -4,10 +4,10 @@
       d: [ [0, 0, 69, 2], [71, 0, 15, 2], [89, 0, 64, 2], [155, 0, 69, 2]]
     - template: [platform, 'gfx/block2.png']
       d: [ [134, 2, 4, 1], [135, 3, 3, 1], [136, 4, 2, 1], [137, 5, 1, 1], [140, 5, 1, 1],
-        [140, 4, 2, 1], [140, 3, 3, 1], [140, 2, 4, 1], [148, 2, 5, 1], [149, 3, 4, 1],
-        [150, 4, 3, 1], [151, 5, 2, 1], [155, 5, 1, 1], [155, 4, 2, 1], [155, 3, 3, 1],
-        [155, 2, 4, 1], [181, 2, 9, 1], [182, 3, 8, 1], [183, 4, 7, 1], [184, 5, 6, 1],
-        [185, 6, 5, 1], [186, 7, 4, 1], [187, 8, 3, 1], [188, 9, 2, 1], [198, 2, 1, 1]]
+         [140, 4, 2, 1], [140, 3, 3, 1], [140, 2, 4, 1], [148, 2, 5, 1], [149, 3, 4, 1],
+         [150, 4, 3, 1], [151, 5, 2, 1], [155, 5, 1, 1], [155, 4, 2, 1], [155, 3, 3, 1],
+         [155, 2, 4, 1], [181, 2, 9, 1], [182, 3, 8, 1], [183, 4, 7, 1], [184, 5, 6, 1],
+         [185, 6, 5, 1], [186, 7, 4, 1], [187, 8, 3, 1], [188, 9, 2, 1], [198, 2, 1, 1]]
     - template: [platform, 'gfx/brick2.png']
       d: [[0,18,1,11], [4,18,7,3], [4,28,7,1]]
     - template: [platform, 'gfx/block4.png']
@@ -38,15 +38,15 @@
       d: [[4,21],[5,21],[6, 21],[7, 21], [8,21], [9, 21], [10, 21],
         [4, 23], [5, 23], [6, 23], [7, 23], [8, 23], [9, 23], [10,23],
         [5, 25], [6, 25], [7, 25], [8, 25], [9, 25]]
-    - template: [goomba]
-      d: [[42, 2], [50, 2], [52, 2], [170, 2], [172, 2]]
-    #- template: [koopa]
-    #  d: [[10, 2]]
-    - template: [spawn, goomba]
-      d: [ [3,2,23,3], [72,2,85,10], [72,2,87,10], [90, 2, 102, 2], [90, 2, 103.5, 2],
-        [105, 2, 117, 2], [105, 2, 118.5, 2], [115, 2, 127, 2], [115, 2, 128.5, 2], [118, 2, 130.5,2], [118,2,132,2]]
-    - template: [spawn, koopa]
-      d: [ [90, 2, 110, 2]]
+    # - template: [goomba]
+    #   d: [[42, 2], [50, 2], [52, 2], [170, 2], [172, 2]]
+    # #- template: [koopa]
+    # #  d: [[10, 2]]
+    # - template: [spawn, goomba]
+    #   d: [ [3,2,23,3], [72,2,85,10], [72,2,87,10], [90, 2, 102, 2], [90, 2, 103.5, 2],
+    #     [105, 2, 117, 2], [105, 2, 118.5, 2], [115, 2, 127, 2], [115, 2, 128.5, 2], [118, 2, 130.5,2], [118,2,132,2]]
+    # - template: [spawn, koopa]
+    #   d: [ [90, 2, 110, 2]]
     - template: [hotspot, flag]
       d: [ [198.4, 3, 0.2, 100]]
     - template: [hotspot, endlevel]
