--- a/data/monkey/text/eng/text.yaml
+++ b/data/monkey/text/eng/text.yaml
@@ -269,7 +269,7 @@ dialogues:
     47: "That's THREEPWOOD."
     48: "Actually, my name is Guybrush Threepwood."
     49: "Oh, right."
-    50: "I am not sure, but I think he may be *asleep."
+    50: "I am not sure, but I think he may be asleep."
     51: "It's the only one I've ever heard that was more ridiculous than \"Squinky\"."
     52: "I'm over here."
     53: "Thranwook."
