--- a/data/monkey/rooms/village1.yaml
+++ b/data/monkey/rooms/village1.yaml
@@ -16,3 +16,7 @@
       nodes: [ [8, 71], [23, 63], [49, 49], [40, 37], [56, 24], [84, 13], [770, 13], [780,34], [1000,34]]
       edges: [ [0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6], [6, 7], [7, 8]]
       depth: auto
+      scale:
+        type: 'func.linear.y'
+        p0: [0, 0.8]
+        p1: [144, 0.1]
