--- a/data/monkey/variables.yaml
+++ b/data/monkey/variables.yaml
@@ -4,6 +4,10 @@ village1_lookout: [8, 71]
 village1_door: [715, 13]
 village1_village2: [1008, 34]
 village2_village1: [436, 35]
+village2_village3: [160, 59]
+village3_village2: [762, 16]
+voodoolady_door: [113, 38]
 scummbar_entrance: [65, 15]
 doors:
   scummbar: closed
+  voodoolady: closed
