--- a/data/monkey/text/eng/text.yaml
+++ b/data/monkey/text/eng/text.yaml
@@ -52,7 +52,7 @@ dialogues:
     rupirate: "Are you a pirate? Can I be on your crew?"
     charge: "Who's in charge here?"
     bye: "Nice talking to you."
-    7: "Have fun on Mêlée Island."
+    7: "Have fun on Mêlée Island™."
     8: "Hey, nice to see you again."
     9: "Guybrush Threepwood?"
     10: "Ha ha ha!!!"
@@ -72,24 +72,24 @@ dialogues:
     24: "You should go talk to the important-looking pirates in the next room."
     25: "They're pretty much in charge around here."
     26: "They can tell you where to go and what to do."
-    27: "Where can I find the Governor?"
+    guvnor: "Where can I find the Governor?"
     28: "Oh, you Have, have you?"
     29: "Well, I am a pirate."
     30: "But, alas, I'm not a captain."
     31: "Governor Marley?"
     32: "Her mansion is on the other side of town."
     33: "But pirates aren't as welcome around her place as they used to be."
-    34: "Why not?"
-    35: "I'm welcome everywhere I go."
-    36: "I think I'll go there right now. Bye."
+    whynot: "Why not?"
+    welcome: "I'm welcome everywhere I go."
+    gothere: "I think I'll go there right now. Bye."
     37: "Okay, but watch out for those guard dogs!"
     38: "My grog is going flat, so you'll have to excuse me."
     39: "I don't want to come between a pirate and his grog."
     40: "Well, this island has a governor..."
     41: "...but we pirates have our own leaders."
-    42: "I want to talk to the leaders of the pirates."
-    43: "Where can I find the Governor of the island?"
-    44: "That's nice. Goodbye."
+    leaders: "I want to talk to the leaders of the pirates."
+    guvnor2: "Where can I find the Governor of the island?"
+    nice: "That's nice. Goodbye."
     45: "That's okay."
     46: "Mine is Mancomb Seepgood."
     47: "Sorry to see you go away mad."
@@ -99,9 +99,9 @@ dialogues:
     51: "I think you need some guidance."
     52: "Well, the last time she had a pirate over for dinner, he fell in love with her."
     53: "It's made things rather uncomfortable for everybody."
-    54: "How's that?"
-    55: "Who is this pirate?"
-    56: "That's too bad. Well, see you later."
+    howsthat: "How's that?"
+    whois: "Who is this pirate?"
+    toobad: "That's too bad. Well, see you later."
     57: "Well, excuse me Mr. Secretive."
     58: "It was none other than the fearsome pirate LeChuck."
     59: "Well, there's a whole big story about what happened next..."
