--- a/data/monkey/dialogues.yaml
+++ b/data/monkey/dialogues.yaml
@@ -85,18 +85,73 @@ mancomb:
       once: True
     rupirate: 
       status: 1
-      next: imguy
+      next: _root
       once: True
+      activate_nodes: [guvnor]
+      close_nodes: [charge]
       order: 10       
     charge: 
       status: 1
-      next: imguy
-      once: True
+      next: charge
+      #once: True
       order: 10       
+    leaders:
+      status: 1
+      once: True
+      order: 10
+      close_nodes: [charge, rupirate]
+      activate_nodes: [guvnor]
+      next: _root
+      parent: charge
+    guvnor2:
+      status: 1
+      once: True
+      next: guvnor
+      order: 20
+      parent: charge
+    nice:
+      status: 1
+      order: 100
+      parent: charge
+    guvnor:
+      status: 0
+      next: guvnor
+      once: True
+      order: 20
+    whynot:
+      status: 1
+      once: True
+      parent: guvnor
+      next: whynot
+      order: 10
+    welcome:
+      status: 1
+      once: True
+      next: _root
+      parent: guvnor
+      order: 20
+    gothere:
+      status: 1
+      once: True
+      parent: guvnor      
+      order: 30
+    howsthat:
+      status: 1
+      parent: whynot
+      order: 10
+      next: _root    
+    whois:
+      status: 1
+      parent: whynot
+      next: _root    
+      order: 20      
+    toobad:
+      status: 1
+      parent: whynot
+      order: 30      
     bye:       
       status: 1
-      next: imguy
-      order: 10
+      order: 100
     ilikeguy:
       status: 1
       parent: imguy
