--- a/data/monkey/text/eng/text.yaml
+++ b/data/monkey/text/eng/text.yaml
@@ -307,3 +307,6 @@ lines:
   29: "Poor little thing..."
   30: "Whatever it was."
   31: "Now, THIS is the cup of a carpenter."
+  32: Hey!
+  33: Don't go into the kitchen!
+  34: You can't come back here!
