added shader textured light

--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB MONKEY_INCLUDE ${INCLUDE_DIR}/gfx/*.h ${INCLUDE_DIR}/gfx/lua/*.h ${INC
         ${INCLUDE_DIR}/gfx/factories/*.h
         ${INCLUDE_DIR}/gfx/activities/*.h ${INCLUDE_DIR}/gfx/math/*.h ${INCLUDE_DIR}/gfx/factories/*.h
         ${INCLUDE_DIR}/gfx/entities/*.h ${INCLUDE_DIR}/gfx/states/*.h ${INCLUDE_DIR}/gfx/shader/*.h)
-file(GLOB MONKEY_SOURCE *.cpp lua/*.cpp python/*.cpp components/*.cpp activities/*.cpp math/*.cpp factories/*.cpp entities/*.cpp states/*.cpp assets/*.cpp model/*.cpp shader/*.cpp skeletal/*.cpp)
+file(GLOB MONKEY_SOURCE *.cpp lua/*.cpp python/*.cpp components/*.cpp activities/*.cpp math/*.cpp mesh/*.cpp factories/*.cpp entities/*.cpp states/*.cpp assets/*.cpp model/*.cpp shader/*.cpp skeletal/*.cpp)
 
 #set(CMAKE_ENABLE_EXPORTS ON)
 
