--- a/src/smb/CMakeLists.txt
+++ b/src/smb/CMakeLists.txt
@@ -5,9 +5,11 @@ add_executable(smb
         factories.cpp
         states/walkside.cpp
         states/jump2d.cpp
+        states/jumpattack.cpp
         states/foewalk.cpp
         states/foechase.cpp
         states/foedead.cpp
+        states/ishit.cpp
         states/koopashell.cpp)
 
 include_directories(${INCLUDE_DIR}  ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
