--- a/data/smb_py/rooms/world1_1.yaml
+++ b/data/smb_py/rooms/world1_1.yaml
@@ -25,7 +25,7 @@
            [150, 4, 3, 1], [151, 5, 2, 1], [155, 5, 1, 1], [155, 4, 2, 1], [155, 3, 3, 1],
            [155, 2, 4, 1], [181, 2, 9, 1], [182, 3, 8, 1], [183, 4, 7, 1], [184, 5, 6, 1],
            [185, 6, 5, 1], [186, 7, 4, 1], [187, 8, 3, 1], [188, 9, 2, 1], [198, 2, 1, 1]]
-    - factory: [brick, brick]
+    - factory: [brick, brick, brickpiece]
       d: [ [20, 5], [22, 5], [24, 5], [77, 5], [79, 5], [80, 9], [81, 9], [82, 9], [83, 9], [84, 9], [85, 9], [86, 9], 
            [87, 9], [91, 9], [92, 9], [93, 9], [100, 5], [118, 5], [121, 9], [122, 9], [123, 9], [128, 9], [129, 5], 
            [130, 5], [131, 9], [168, 5], [169, 5], [171, 5]]
@@ -49,6 +49,8 @@
       d: [[198.5,3]]
     - factory: [collect, {'func': gotoNext, 'size': [2,2], 'info': {'world': 'world1_2', 'pos': 0} }]
       d: [[205,2]]
+    - factory: [tilemap, hill]
+      d: [[0, 2, -1], [48, 2, -1], [96,2,-1], [144,2,-1], [192,2,-1]]
     # - template: [sprite, flag]
     #   d: [[198, 11,-0.5, 'flag']]
 
