--- a/data/smb_py/assets/sprites/01.yaml
+++ b/data/smb_py/assets/sprites/01.yaml
@@ -207,5 +207,17 @@ coin_counter:
         - [144,80,16,16]
         - [160,80,16,16]
         - [144,80,16,16]
+foam:
+  sheet: 'gfx/smb1.png'
+  type: 'asset.sprite'
+  animations:
+    def:
+      frames:
+        - [112,128,16,16]
+        - [128,128,16,16]
+        - [144,128,16,16]
+        - [160,128,16,16]
+        - [176,128,16,16]
+        - [192,128,16,16]
+        - [208,128,16,16]
 
-        
