--- a/data/smb_py/rooms/world1_1.yaml
+++ b/data/smb_py/rooms/world1_1.yaml
@@ -51,7 +51,12 @@
       d: [[205,2]]
     - factory: [tilemap, hill]
       d: [[0, 2, -1], [48, 2, -1], [96,2,-1], [144,2,-1], [192,2,-1]]
-    # - template: [sprite, flag]
+    - factory: [tilemap, hillsmall]
+      d: [[16, 2, -1],[64,2,-1]]      # - template: [sprite, flag]
+    - factory: [img, 'gfx/waterfll.png']
+      d: [[2,0,1,3,2]]
+    - factory: [sprite, foam]
+      d: [[2,2],[3,2],[4,2]]    
     #   d: [[198, 11,-0.5, 'flag']]
 
   # room:
