--- a/data/smb_py/rooms/world1_1.yaml
+++ b/data/smb_py/rooms/world1_1.yaml
@@ -15,8 +15,12 @@
     - factory: [bg, 92, 148, 252]
       dynamic: False
       d: [ [0,0,-5] ]
-    - factory: [spawn, {model: 'goomba', fliph: False, flipAtPlatformEnd: False }]
+    - factory: [spawn, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
       d: [ [6,2,12,0]]      
+    - factory: [foe, {model: 'goomba', fliph: False, flipAtPlatformEnd: False, ctag: 'goomba' }]
+      d: [ [42, 2], [50, 2], [51.5, 2]]
+    - factory: [koopa, {model: 'koopa', fliph: True, flipAtPlatformEnd: True, ctag: 'koopa' }]
+      d: [ [5, 2]]
     - factory: [platform, '/gfx/block1.png']
       d: [ [0, 0, 69, 2], [71, 0, 15, 2], [89, 0, 64, 2], [155, 0, 69, 2] ]
     - factory: [platform, 'gfx/block2.png']
@@ -53,54 +57,8 @@
       d: [[0, 2, -1], [48, 2, -1], [96,2,-1], [144,2,-1], [192,2,-1]]
     - factory: [tilemap, hillsmall]
       d: [[16, 2, -1],[64,2,-1]]      # - template: [sprite, flag]
-    - factory: [img, 'gfx/waterfll.png']
-      d: [[2,0,1,3,2]]
-    - factory: [sprite, foam]
-      d: [[2,2],[3,2],[4,2]]    
-    #   d: [[198, 11,-0.5, 'flag']]
-
-  # room:
-  #   - template: [platform, '/gfx/block1.png']
-  #     d: [ [0, 0, 69, 2], [71, 0, 15, 2], [89, 0, 64, 2], [155, 0, 69, 2]]
-  #   - template: [platform, 'gfx/block2.png']
-  #     d: [ [134, 2, 4, 1], [135, 3, 3, 1], [136, 4, 2, 1], [137, 5, 1, 1], [140, 5, 1, 1],
-  #        [140, 4, 2, 1], [140, 3, 3, 1], [140, 2, 4, 1], [148, 2, 5, 1], [149, 3, 4, 1],
-  #        [150, 4, 3, 1], [151, 5, 2, 1], [155, 5, 1, 1], [155, 4, 2, 1], [155, 3, 3, 1],
-  #        [155, 2, 4, 1], [181, 2, 9, 1], [182, 3, 8, 1], [183, 4, 7, 1], [184, 5, 6, 1],
-  #        [185, 6, 5, 1], [186, 7, 4, 1], [187, 8, 3, 1], [188, 9, 2, 1], [198, 2, 1, 1]]
-  #   - template: [platform, 'gfx/brick2.png']
-  #     d: [[0,18,1,11], [4,18,7,3], [4,28,7,1]]
-  #   - template: [platform, 'gfx/block4.png']
-  #     d: [[0,16,16,2]]
-  #   - template: [tileMap, pipeh]
-  #     d: [ [13, 18, 1] ]
-  #   - template: [tileMap, pipeh2]
-  #     d: [[15, 20]]
-  #   - template: [mushroomBrick]
-  #     d: [[21,5], [78, 5], [109, 9]]
-  #   - template: [coinBrick]
-  #     d: [[16, 5], [22, 9], [23, 5], [94, 9], [106,5], [109, 5], [112, 5], [129,9], [130,9], [170, 5]]
-  #   - template: [warp]
-  #     d: [ [57.5, 6, [2, 25], [0, 256, 256, 512]] ]
-  #   - template: [warph]
-  #     d: [ [13, 18, [164, 0], [0, 3584, 0, 256]]]
-  #   - template: [coin]
-  #     d: [[4,21],[5,21],[6, 21],[7, 21], [8,21], [9, 21], [10, 21],
-  #       [4, 23], [5, 23], [6, 23], [7, 23], [8, 23], [9, 23], [10,23],
-  #       [5, 25], [6, 25], [7, 25], [8, 25], [9, 25]]
-    # - template: [goomba]
-    #   d: [[42, 2], [50, 2], [52, 2], [170, 2], [172, 2]]
-    # #- template: [koopa]
-    # #  d: [[10, 2]]
-    # - template: [spawn, goomba]
-    #   d: [ [3,2,23,3], [72,2,85,10], [72,2,87,10], [90, 2, 102, 2], [90, 2, 103.5, 2],
-    #     [105, 2, 117, 2], [105, 2, 118.5, 2], [115, 2, 127, 2], [115, 2, 128.5, 2], [118, 2, 130.5,2], [118,2,132,2]]
-    # - template: [spawn, koopa]
-    #   d: [ [90, 2, 110, 2]]
-    # - template: [hotspot, flag]
-    #   d: [ [198.4, 3, 0.2, 100]]
-    # - template: [hotspot, endlevel]
-    #   d: [ [205, 2, 1, 1]]
-
-  
+    # - factory: [img, 'gfx/waterfll.png']
+    #   d: [[2,0,1,3,2]]
+    # - factory: [sprite, foam]
+    #   d: [[2,2],[3,2],[4,2]]    
 
