--- a/src/smb/CMakeLists.txt
+++ b/src/smb/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(smb
         states/foechase.cpp
         states/foedead.cpp
         states/ishit.cpp
+        states/bounce.cpp
         states/koopashell.cpp)
 
 include_directories(${INCLUDE_DIR}  ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
