--- a/data/smb_py/main.yaml
+++ b/data/smb_py/main.yaml
@@ -3,7 +3,7 @@
   lang: eng
   device_size: [256, 256]
   window_size: [512, 512]
-  start_room: test
+  start_room: world1_1
   fonts:
     - id: main
       file: './fonts/prstartk.ttf'
